<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CMAuthor</string>
    <string name="action_move_up">Move Item Up</string>
    <string name="items_in_list">Items in List</string>
    <string name="action_move_down">Move Item Down</string>
    <string name="action_delete">Delete this Item</string>
    <string name="action_update">Update this Item</string>
    <string name="loading">Loading data</string>
    <string name="swipe">Swipe left and right for activities, objectives and resource links</string>
    <string name="add_category">Add New Category</string>
    <string name="update_save">Update and Save</string>
    <string name="add_save">Add New and Save</string>
    <string name="exit">Exit</string>
    <string name="save">Save Data</string>
    <string name="add_course">Add Training Unit</string>
    <string name="import_course">Import Training Units</string>
    <string name="import_category">Import Category</string>
    <string name="sequence">Sequence Number</string>
    <string name="add_lesson">Add Task/Lesson</string>
    <string name="add_activity">Add Activity</string>
    <string name="add_objective">Add Objective</string>
    <string name="add_resource">Add Resource Links</string>
    <string name="show_desc">Show Descriptions</string>
    <string name="hide_desc">Hide Descriptions</string>
    <string name="enter_course_name">Enter Name</string>
    <string name="enter_course_desc">Enter Description</string>
    <string name="enter_category_label">Enter Category Name</string>
    <string name="enter_category_desc">Enter Category desc</string>
    <string name="lesson_list">Task/Lesson List</string>
    <string name="enter_lesson_name">Enter Task Name</string>
    <string name="enter_lesson_desc">Enter Task Description</string>
    <string name="enter_activity_name">Enter Activity Name</string>
    <string name="enter_activity_desc">Enter Activity Description</string>
    <string name="enter_objective_name">Enter Objective Name</string>
    <string name="enter_objective_desc">Enter Objective Description</string>
    <string name="enter_url">Enter/Paste Link</string>
    <string name="enter_lesson_objective">Enter Task Objective</string>
    <string name="lesson_objective_list">Task Objective List</string>
    <string name="enter_lesson_activity">Enter Task Activity List</string>
    <string name="lesson_activity_list">Task Activity List</string>
    <string name="enter_lesson_resource">Enter Task Resource Link</string>
    <string name="lesson_resources_list">Task Resources List</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_resource">Save this page as a resource</string>
    <string name="action_back">Back</string>
    <string name="action_back_to_list">Back to Resource List</string>
    <string name="action_add_resource_for">Add this Link</string>
    <string name="press_and_hold_category">Press and Hold to select Category</string>
    <string name="press_and_hold_course">Press and Hold to select Course</string>
    <string name="update">Update</string>
    <string name="category_list">Category List</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="list_courses">List Courses</string>
    <string name="list_lessons">List Tasks</string>
    <string name="list_objectives">List Objectives</string>
    <string name="list_activities">List Task Activities</string>
    <string name="submit_author">Submit Author Registration</string>
    <string name="more_info">Get more information</string>
    <string name="title_activity_more_info">MoreInfoActivity</string>
    <string name="realname">CourseMaker Author</string>
    <string name="course_list_header">List of Courses in Category</string>
    <string name="resource_list_header">List of Task Resource Links</string>
    <string name="objective_list_header">List of Task Objectives</string>
    <string name="activity_list_header">List of Task Activities</string>
    <string name="activities_header">List of Activities in Task/Lesson</string>
    <string name="activities">Activities</string>
    <string name="category_overview">Category Overview</string>
    <string name="info">CourseMaker Information</string>
    <string name="title_activity_search">Resources</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_course_overview">Course Overview</string>
    <string name="title_activity_category_course">CategoryCourseActivity</string>
    <string name="title_activity_lessons_stuff">CMAuthor</string>
    <string name="title_activity_lesson_help">LessonHelpActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_import">Import Training Units</string>

</resources>