<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add_lesson"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/add_lesson"/>
    <item
        android:id="@+id/menu_add_activity"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/add_activity"/>
    <item
        android:id="@+id/menu_add_resource"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/add_resource"/>
    <item
        android:id="@+id/menu_show_description"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/show_desc"/>
    <item
        android:id="@+id/menu_hide_description"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/hide_desc"/>


</menu>