<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <RelativeLayout
        android:id="@+id/CRS_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CRS_layout0"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/CRS_label2"
            style="@style/Title2TextStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/add_activity" />

        <EditText
            android:id="@+id/CRS_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_activity_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:layout_below="@id/CRS_label2"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/CRS_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_activity_desc"
            android:inputType="textMultiLine"
            android:layout_below="@id/CRS_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/CRS_desc">

            <Button
                android:id="@+id/CRS_btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cancel_32" />

            <View
                android:layout_width="20dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/CRS_btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableLeft="@drawable/ic_action_upload"
                android:text="@string/save" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/LH_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CRS_layout1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="5dp">

        <TextView
            android:id="@+id/LH_label"
            style="@style/TextStyleGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:text="@string/activity_list" />

        <TextView
            android:id="@+id/LH_count"
            style="@style/RedCountBoxSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:text="00"
            android:textSize="12sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/CRS_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/LH_layout"
        android:background="@color/grey" />

</RelativeLayout>