<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CRS_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="5dp"
    android:visibility="visible" >

    <RelativeLayout
        android:id="@+id/CRS_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xwhite_rounded_corners"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/CRS_layout1a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/xwhite_rounded_corners"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/CRS_categoryLabel"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category :"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/CRS_category"
                style="@style/Title3TextStyleBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Category Name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CRS_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CRS_layout1a"
            android:layout_marginTop="10dp"
            android:background="@color/grey_light"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/CRS_addLabel"
                style="@style/TextStyleBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_course"
                android:textColor="@color/grey2"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/CRS_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CRS_layout2"
            android:hint="@string/enter_course_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:padding="10dp" />

        <EditText
            android:id="@+id/CRS_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CRS_name"
            android:gravity="left|top"
            android:hint="@string/enter_course_desc"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/CRS_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CRS_desc"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/CRS_btnCancel"
                style="@style/ButtonCancelSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <View
                android:layout_width="20dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/CRS_btnSave"
                style="@style/ButtonNavyBlueSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/save" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/CRS_layout3" />
    </RelativeLayout>

</ScrollView>