<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CRS_layoutTop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:id="@+id/CRS_layoutTop2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">





        <RelativeLayout
            android:id="@+id/CRS_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CRS_layoutCourse"
            android:background="@drawable/white_rounded_corners"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/CRS_label2"
                style="@style/Title2TextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/add_resource"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/CRS_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/enter_lesson_resource"
                android:inputType="textUri"
                android:layout_marginTop="15dp"
                android:layout_below="@id/CRS_label2" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/CRS_name"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/CRS_btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/cancel_32" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/CRS_btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_search" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/CRS_btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/save" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>