<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/CAT_layouta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ball_48"
            android:visibility="gone" />

        <TextView
            android:id="@+id/CAT_author"
            style="@style/TextStyleGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" android:textSize="20sp"
            android:text="Author Full Name"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CAT_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CAT_layouta"
        android:background="@drawable/xwhite_rounded_corners"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/CRS_label2"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/add_category"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/CAT_categoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_category_label"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/CAT_btnCancel"
                style="@style/ButtonCancelSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <View
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_below="@id/CAT_layout1" />

            <Button
                android:id="@+id/CAT_btnSave"
                style="@style/ButtonNavyBlueSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/LH_space"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/CAT_layout1" />

    <RelativeLayout
        android:id="@+id/LH_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LH_space"
        android:background="@drawable/xwhite_rounded_corners"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/LH_label"
            style="@style/TextStyleGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/category_list"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LH_count"
            style="@style/RedCountBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="00" android:gravity="center"
            android:textSize="12sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/CAT_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/LH_layout"
        android:layout_marginTop="5dp"
        android:background="@color/grey"
        android:dividerHeight="5dp" />

</RelativeLayout>